Closed Bug 1865570 Opened 7 months ago Closed 7 months ago

[loong64][mips64] Failed to build loong64 and mips64 simulator (error: no member named 'Args_Int32_GeneralInt64Int64Int64GeneralGeneral' in namespace 'js::jit')

Categories

(Core :: JavaScript: WebAssembly, defect)

Other
Unspecified
defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox120 --- unaffected
firefox121 --- wontfix
firefox122 --- fixed

People

(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)

References

(Blocks 2 open bugs, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Bug 1861267 updated a function prototype in simulators, which should be ported to loong64 and mips64 platform. Otherwise, fail to build js simulator for loong64 and mips64:

js/src/jit/loong64/Simulator-loong64.cpp:2861:21: error: no member named 'Args_Int32_GeneralInt64Int64Int64GeneralGeneral' in namespace 'js::jit'; did you mean 'Args_Int32_GeneralInt64Int64Int64General'?

Blocks: 1757272, 1639895
Keywords: regression
Regressed by: 1861267

Port D193527 to loong64 and mips64 platform.

Assignee: nobody → zhaojiazhong-hf
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/b7ce1a446e6a
[loong64][mips64] Update a function prototype in simulator. r=jseward DONTBUILD
Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch

Set release status flags based on info from the regressing bug 1861267

The patch landed in nightly and beta is affected.
:zhaojiazhong-hf, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox121 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(zhaojiazhong-hf)

Since it only affects simulator, I think it's ok not to uplift it.
But I'm not clear how to set status-firefox121 to wontfix.

Flags: needinfo?(zhaojiazhong-hf)

(In reply to Zhao Jiazhong from comment #6)

Since it only affects simulator, I think it's ok not to uplift it.
But I'm not clear how to set status-firefox121 to wontfix.

Removed the tracking request, and set 121 to wontfix

(In reply to Donal Meehan [:dmeehan] from comment #7)

Removed the tracking request, and set 121 to wontfix

Thanks for your reply, but may be it needs some kind of permission? I did't find the wontfix option in Status.

(In reply to Zhao Jiazhong from comment #8)

Thanks for your reply, but may be it needs some kind of permission? I did't find the wontfix option in Status.

Correct, it's edit permissions. not everything is available.
Thanks again for Comment 6

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: