Bug 1865570 - [loong64][mips64] Update a function prototype in simulator. r=jseward DONTBUILD

Port D193527 to loong64 and mips64 platform.

Differential Revision: https://phabricator.services.mozilla.com/D194028